# binsard

./: Cargo.toml  FORMAT.md  README.md
binsard/: Cargo.toml  README.md
binsard/benches/: roundtrip.rs
binsard/examples/: basic.rs  bit_packing.rs  error_handling.rs
binsard/src/: lib.rs  main.rs
binsard/tests/: roundtrip.rs
binsard/tests/compile_fail/: enum_too_many_variants.rs  enum_too_many_variants.stderr  invalid_len_bytes.rs  invalid_len_bytes.stderr  union_not_supported.rs  union_not_supported.stderr  unsupported_option_inner_type.rs  unsupported_option_inner_type.stderr
binsard_derive/: Cargo.toml  README.md
binsard_derive/src/: decode.rs  encode.rs  lib.rs  parser.rs
