[workspace]
members = ["binsard", "binsard_derive"]
resolver = "2"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
unreadable_literal = "allow"
unusual_byte_groupings = "allow"

[patch.crates-io]
binsard = { path = "binsard" }
binsard_derive = { path = "binsard_derive" }

[workspace.dependencies]
deluxe = { version = "0.5" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2" }
binsard = { path = "binsard" }
binsard_derive = { path = "binsard_derive" }
