[package]
name = "binsard_derive"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["derjones <jones@freshx.de>"]
description = "Derive macros for the binsard binary serialization format"
repository = "https://github.com/derjones/binsard"


[lints]
workspace = true

[dependencies]
deluxe = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }


[lib]
proc-macro = true
